--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
 body{
-    background-color: brown;
+    background-color: lightskyblue;
+}
+
+#items{
+    width: 200px;
+}
+
+#items button{
+    float: right;
 }
