--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,176 @@
-body{
-    background-color: lightskyblue;
+
+
+@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+body {
+    font-family: 'Poppins', sans-serif;
+    background: #fafafa;
 }
 
-#items{
-    width: 200px;
+p {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.1em;
+    font-weight: 300;
+    line-height: 1.7em;
+    color: #999;
 }
 
-#items button{
-    float: right;
+a,
+a:hover,
+a:focus {
+    color: inherit;
+    text-decoration: none;
+    transition: all 0.4s;
 }
+
+.navbar {
+    padding: 15px 10px;
+    background: #fff;
+    border: none;
+    border-radius: px;
+    margin-bottom: 40px;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+.navbar-btn {
+    box-shadow: none;
+    outline: none !important;
+    border: none;
+}
+
+.line {
+    width: 100%;
+    height: 1px;
+    border-bottom: 1px dashed #ddd;
+    margin: 40px 0;
+}
+
+#sidebarCollapse{
+    margin-right: 5px ;
+    display: inline-block;
+    
+  
+}
+
+
+
+/* ---------------------------------------------------
+    SIDEBAR STYLE
+----------------------------------------------------- */
+
+.wrapper {
+    display: flex;
+    width: 100%;
+    align-items: stretch;
+}
+
+#sidebar {
+    min-width: 250px;
+    max-width: 250px;
+    background: #7386D5;
+    color: #fff;
+    transition: all 0.3s;
+}
+
+#sidebar.active {
+    margin-left: -250px;
+}
+
+
+
+#sidebar .sidebar-header {
+    padding: 20px;
+    background: #6d7fcc;
+}
+
+#sidebar ul.listen {
+    padding: 20px 0;
+    bottom: 0;
+    
+}
+
+#sidebar ul p {
+    color: #fff;
+    padding-left: 10px;
+    margin-bottom: 0;
+    padding-bottom: 10px;
+   
+}
+
+#sidebar ul li a {
+    padding: 10px;
+    font-size: 1.1em;
+    display: block;
+}
+
+#sidebar ul li a:hover {
+    color: #7386D5;
+    background: #fff;
+}
+
+ul.neue_liste_hinzufügen {
+    width: 250px;
+    border-top: 1px solid #47748b;
+    padding: 20px;
+    margin: 0%;
+    position: fixed;
+    bottom: 0%;
+    
+}
+
+ul.neue_liste_hinzufügen a {
+    text-align: center;
+    font-size: 0.9em !important;
+    display: block;
+    border-radius: 5px;
+   
+}
+#neue_liste_hinzufügen_btn
+{
+    background: #6d7fcc !important;
+    color: #fff !important;
+}
+#neue_liste_hinzufügen_btn:hover{
+    color: #6d7fcc !important;
+    background: #fff !important;
+}
+
+#plus{
+    padding-right: 4px;
+   
+}
+
+/* ---------------------------------------------------
+    CONTENT STYLE
+----------------------------------------------------- */
+
+#content {
+    width: 100%;
+    padding: 20px;
+    min-height: 100vh;
+    transition: all 0.3s;
+}
+
+/* ---------------------------------------------------
+    MEDIAQUERIES
+----------------------------------------------------- */
+
+@media (max-width: 768px) {
+    #sidebar {
+        margin-left: -250px;
+    }
+    .modal-body {
+        position: relative;
+        max-height: 200px; 
+        overflow-y: auto;
+    }
+    .modal-wide {
+        width: 95%;
+          }
+    #sidebar.active {
+        margin-left: 0;
+    }
+  
+}
+
+
+
