--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,9 @@ ul.neue_liste_hinzufügen a {
 /* ---------------------------------------------------
     CONTENT STYLE
 ----------------------------------------------------- */
-
+.list-group-item {
+    padding: 14px 15px !important;
+}
 #content {
     width: 100%;
     padding: 20px;
@@ -138,7 +140,7 @@ ul.neue_liste_hinzufügen a {
 
 #btn_items {
     float: right;
-
+    margin-top: -7px;
 }
 
 #btn_delite {
@@ -157,10 +159,7 @@ ul.neue_liste_hinzufügen a {
   
     position: relative;
 }    
-
-
-
-
+#share,
 #print_btn,
 #behindert {
     float: right;
@@ -203,12 +202,30 @@ ul.neue_liste_hinzufügen a {
 }
 
 
-
 #print_btn{
     float: right;
     border: none;
   
 }
+
+/* ---------------------------------------------------
+    Scrollbar
+----------------------------------------------------- */
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+}
+::-webkit-scrollbar-thumb {
+    background: #989ca1; 
+}
+::-webkit-scrollbar-thumb:hover {
+    background: #6c757d;
+}
+
+
 /* ---------------------------------------------------
     MEDIAQUERIES
 ----------------------------------------------------- */
