--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ a:focus {
     SIDEBAR STYLE
 ----------------------------------------------------- */
 
-.wrapper {
+.listcontent {
     display: flex;
     width: 100%;
     align-items: stretch;
